# multi_robot_herding

./: README.md  agent.py  analyse_data.py  animation_handle.py  boid.py  environment.py  kinematic_model.py  main.py  math_utils.py  obstacle.py  readme.txt  requirements.txt  simple_controller.py  simulation.py  sprite_handle.py  summary.txt  test.launch  test.py  test_collision.py  test_pymunk.py  test_qp.py
animation/: animation_handle.py  obstacle.py
app/: __init__.py  params.py  utils.py
behavior/: another_formation.py  behavior.py  boid.py  cattle.py  concave_hull.py  entity.py  flock.py  formation_control.py  leader_follower.py  mathematical_flock.py  mathematical_formation.py  obstacle.py  orbit.py  saber_flock.py  spiral_motion.py  state_machine.py
config/: default_config.yml
data/: all_states_1687660807.pickle  all_states_1687747129.pickle  gathered_flock.txt  pairwise_data_1683078664.8932538.csv  pairwise_potential.txt  shrink_condition_1683091618.2209542.csv  total_ps_1683088017.192099.csv  total_ps_1683088198.540027.csv
entity/: classic_boid.py  entity.py  herd.py  obstacle.py  plotting_entity.py  predator.py  shepherd.py  visualise_agent.py
environment/: environment.py  spawner.py
examples/: full_simulation.py
kinematic/: kinematic_model.py
lib/: main.py  requirements.txt  setup.py
lib/config/: default_config.yml
lib/multi_robot_herding/behavior/: decentralised_formation.py  decentralised_surrounding.py  formation_common.py  mathematical_flock.py
lib/multi_robot_herding/common/: behavior.py  centralised_behavior.py  entity.py
lib/multi_robot_herding/entity/: entity.py  shepherd.py
lib/multi_robot_herding/environment/: environment.py  spawner.py
lib/multi_robot_herding/utils/: utils.py
lib/scripts/: analyse_data.py
lib/test/: test_decen_surrounding.py  test_math_flocking.py  test_math_utils.py
mrh_animal/: CMakeLists.txt  package.xml
mrh_animal/include/mrh_animal/: animal_behavior_plugin.hpp  behavior_interface.hpp  flocking_behavior.hpp  math_utils.hpp  saber_flocking.hpp  wandering_behavior.hpp
mrh_animal/src/: animal_behavior_plugin.cpp  saber_flocking.cpp  wandering_behavior.cpp
mrh_animal/test/: test_math_utils.cpp  test_saber_flocking.cpp
mrh_gazebo/: CMakeLists.txt  package.xml
mrh_gazebo/include/mrh_gazebo/: controller.hpp
mrh_gazebo/launch/: launch_file_generator.py  mrh_gazebo.launch
mrh_gazebo/launch/generator/: env_generator.py  launch_file_generator.py  mrh_generator.py  robot_generator.py
mrh_gazebo/launch/generator/config/: default.yaml
mrh_gazebo/models/cows/: cat_run.dae  cow_idle.dae  deer.dae  dino.dae  fox.dae  horse.dae  horse_run.dae  horse_walk.dae  idle.dae  walk.dae
mrh_gazebo/models/walle/: walle.dae
mrh_gazebo/models/wolf/: walk.dae
mrh_gazebo/src/: controller.cpp
mrh_gazebo/worlds/: test_world.world
mrh_plugin/: CMakeLists.txt  package.xml
mrh_plugin/include/mrh_plugin/: simple_controller_plugin.hpp
mrh_plugin/src/: simple_controller_plugin.cpp
mrh_robot/: CMakeLists.txt  package.xml
mrh_robot/include/mrh_robot/: herding_by_surrouding.hpp  herdingbysurrouding.hpp
mrh_robot/src/: herding_by_surrounding.cpp
mrh_robot/test/: test_herding_by_surrounding.cpp
multi_robot_herding/: CMakeLists.txt  package.xml
multi_robot_herding/behavior/: Dockerfile  bearing_formation.py  constraint.py  controller.py  decentralised_approaching.py  decentralised_cbf.py  decentralised_formation.py  decentralised_surrounding.py  dynamic.py  formation_control.py  graph_theory.py  math_utils.py  mathematical_flock.py  mathematical_formation.py  orbit.py  virtual_behavior.py
multi_robot_herding/common/: behavior.py  decentralised_behavior.py
multi_robot_herding/entity/: entity.py  herd.py  obstacle.py  robot.py  shepherd.py  virtual_shepherd.py  visualise_agent.py
multi_robot_herding/environment/: environment.py  spawner.py
multi_robot_herding/utils/: params.py  utils.py
scripts/: analys_success_rate.py  analyse_cbf.py  analyse_data.py  build_graphs.py  final_graph.py
src/multi_robot_herding/behavior/: behavior.py  mathematical_flock.py  mathematical_formation.py  orbit.py
src/multi_robot_herding/common/: entity.py
src/multi_robot_herding/entity/: entity.py  herd.py  obstacle.py  plotting_entity.py  shepherd.py  visualise_agent.py
src/multi_robot_herding/environment/: environment.py  spawner.py
