<?xml version="1.0"?>
<package format="2">
  <name>mrh_gazebo</name>
  <version>1.3.1</version>
  <description>
    Gazebo simulation package for the TurtleBot3
  </description>
  <license>Apache 2.0</license>
  <maintainer email="khoanguyendacdang2198@gmail.com">Khoa Nguyen</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>gazebo_ros</depend>
  <exec_depend>gazebo</exec_depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>